@startuml

class ConsoleApplication

interface Interpreter {
    + supports(String line): boolean
    + interpret(String line): boolean
}

class ConsoleInputInterpreter {
    - interpreters: List<Interpreter>
    + interpret(String line)
}

class InitCommandInterpreter {
    - parkingSpace: ParkingSpace
    - vehicleTypeRepository: VehicleTypeRepository
}
class EnterVehicleCommandInterpreter {
    - parkingSpace: ParkingSpace
    - vehicleTypeRepository: VehicleTypeRepository
}

class ExitVehicleCommandInterpreter {
    - parkingSpace: ParkingSpace
}

class DefaultInterpreter

Interpreter <|-- InitCommandInterpreter
Interpreter <|-- EnterVehicleCommandInterpreter
Interpreter <|-- ExitVehicleCommandInterpreter
Interpreter <|-- DefaultInterpreter
ConsoleInputInterpreter *-- Interpreter

ConsoleApplication -- ConsoleInputInterpreter: uses >

@enduml